# random_access_files_manager

./: .gitignore  CMakeLists.txt  README.md  database.cpp  db.txt  main.cpp  personal.cpp  personal.h  student.cpp  student.h
database/: CMakeLists.txt  database.cpp  database.h
personal/: CMakeLists.txt  personal.h
src/: CMakeLists.txt
src/database/: CMakeLists.txt  database.cpp
src/database/include/database/: database.h
src/personal/: CMakeLists.txt  personal.cpp
src/student/: CMakeLists.txt  student.cpp
src/student/include/student/: student.h
student/: CMakeLists.txt  student.h
